ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress           # Ingress name
  namespace: devops           # Namespace

spec:
  rules:
  - host: myapp.local         # Domain name (URL)
    http:
      paths:
      - path: /               # URL path
        pathType: Prefix      # Matches all paths starting with /
        backend:
          service:
            name: app-service # Service to route traffic
            port:
              number: 80      # Service port
